--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,19 @@
 
     <groupId>cezarystasiak</groupId>
     <artifactId>Discordhook</artifactId>
-    <version>0.1</version>
+    <version>0.11</version>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
     </dependencies>
 
